--- a/MeshCullerBackend/MeshCullerBackend.vcxproj
+++ b/MeshCullerBackend/MeshCullerBackend.vcxproj
@@ -44,12 +44,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>$(SolutionDir)bin\$(Configuration)-$(Platform)\MeshCullerBackend</OutDir>
-    <IntDir>$(SolutionDir)bin-int\$(Configuration)-$(Platform)\MeshCullerBackend</IntDir>
+    <OutDir>$(SolutionDir)bin\$(Configuration)-$(Platform)\MeshCullerBackend\</OutDir>
+    <IntDir>$(SolutionDir)bin-int\$(Configuration)-$(Platform)\MeshCullerBackend\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutDir>$(SolutionDir)bin\$(Configuration)-$(Platform)\MeshCullerBackend</OutDir>
-    <IntDir>$(SolutionDir)bin-int\$(Configuration)-$(Platform)\MeshCullerBackend</IntDir>
+    <OutDir>$(SolutionDir)bin\$(Configuration)-$(Platform)\MeshCullerBackend\</OutDir>
+    <IntDir>$(SolutionDir)bin-int\$(Configuration)-$(Platform)\MeshCullerBackend\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
