--- a/MeshCullerForSource2/MeshCullerForSource2.csproj
+++ b/MeshCullerForSource2/MeshCullerForSource2.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
