--- a/MeshCullerBackend/MeshCullerBackend.vcxproj
+++ b/MeshCullerBackend/MeshCullerBackend.vcxproj
@@ -96,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Math.hpp" />
+    <ClInclude Include="Mesh.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
