--- a/MeshCullerBackend/MeshCullerBackend.vcxproj.filters
+++ b/MeshCullerBackend/MeshCullerBackend.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="Math.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Mesh.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
